Avoid overflow scrollbars

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -2,3 +2,7 @@
 canvas {
     margin: auto;
 }
+
+html {
+    overflow: hidden;
+}
